--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" href="./logo.png" type="image/x-icon">
 	<link rel="stylesheet" href="./src/style.css">
 	
-	<title>Medicords</title>
+	<title>Medicords - Your Health, Your Privacy in Your Hand Secured by Blockchain</title>
 </head>
 
 <body>
